--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node server.js",
-    "dev": "NODE_ENV=development nodemon server.js",
+    "start:db": "mongod --dbpath /usr/local/var/mongodb",
+    "start:server": "nodemon server.js",
+    "dev": "npm run start:db & npm run start:server",
     "test": "jest",
     "test:watch": "jest --watch"
   },
