--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.4.19"
   },
   "devDependencies": {
+    "dotenv": "^7.0.0",
     "jest": "^24.5.0",
     "mongodb-memory-server": "^4.2.1",
     "nodemon": "^1.18.10",
