Install brcypt and jsonwebtoken libraries

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19"
   },
   "devDependencies": {
